<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.addAksi.AddAksiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_add_aksi"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_aksi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
            android:drawablePadding="8dp"
            android:hint="@string/et_title_aksi"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_desc_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_aksi_name">

            <ImageView
                android:id="@+id/iv_desc_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="no"
                android:scaleType="fitStart"
                android:src="@drawable/baseline_description_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_desc_aksi"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/et_desc_aksi"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_desc_drawable"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="8dp"
            android:hint="@string/et_location"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_desc_et" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_address_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_location">

            <ImageView
                android:id="@+id/iv_address_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:importantForAccessibility="no"
                android:scaleType="fitStart"
                android:src="@drawable/baseline_edit_location_alt_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/et_address"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_address_drawable"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/et_date_start"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_address_et" />

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/et_date_end"
            android:importantForAutofill="no"
            android:inputType="date"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_start_date" />

        <EditText
            android:id="@+id/et_donation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawablePadding="8dp"
            android:hint="@string/et_donation_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_end_date" />

        <EditText
            android:id="@+id/et_cover_pict"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/baseline_add_a_photo_24"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/et_photo_cover"
            android:importantForAutofill="no"
            android:inputType="none"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_donation" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/btn_submit_aksi"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_cover_pict" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>