<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/desc_profile_pic"
            android:src="@drawable/user"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/btn_add_alamat"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/light_gray"
            android:drawableLeft="@drawable/baseline_library_books_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:text="@string/add_address"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

        <Button
            android:id="@+id/btn_account_setting"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_gray"
            android:drawableLeft="@drawable/baseline_manage_accounts_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:text="@string/account_setting"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_alamat" />

        <Button
            android:id="@+id/btn_aksi_history"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_gray"
            android:drawableLeft="@drawable/baseline_history_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:text="Riwayat Aksi"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_account_setting" />

        <Button
            android:id="@+id/btn_point_history"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/light_gray"
            android:drawableLeft="@drawable/baseline_history_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:text="Histori Point"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_aksi_history" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:text="@string/btn_logout"
            android:backgroundTint="@color/logout_red"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>